# erav2-s2

./: .gitignore  README.md  main.py  pyproject.toml
setup/: aws-setup.md  deployment-setup.md
static/: index.html
